added task lists to Markdown Cheat Sheet

--- a/public/cheatsheets/markdown-help.html
+++ b/public/cheatsheets/markdown-help.html
@@ -83,3 +83,14 @@ without syntax highlighting:
 I think you should use an
 `&lt;addr&gt;` element here instead.</pre>
 </div>
+
+<div class="col">
+	<p>Task Lists</p>
+	<pre>
+- [ ] a task list item
+- [ ] list syntax required
+- [ ] normal **formatting**,
+      @mentions, #1234 refs
+- [ ] incomplete
+- [x] completed</pre>
+</div>
